--- a/second_homework/於光晶/index.html
+++ b/second_homework/於光晶/index.html
@@ -8,34 +8,30 @@
 </head>
 <body>
 	<section>
-		<button id="btn">点我</button>
+		<button id="btn">点我出现天气</button>
+		<p class="cityName"></p>
 		<div id="container">
 			<div class="weather-box">
-				<p class="cityName"></p>
 				<div class="average-temp"></div>
 				<div class="weather"></div>
 				<div class="date"></div>
 			</div>
 			<div class="weather-box">
-				<p class="cityName"></p>
 				<div class="average-temp"></div>
 				<div class="weather"></div>
 				<div class="date"></div>
 			</div>
 			<div class="weather-box">
-				<p class="cityName"></p>
 				<div class="average-temp"></div>
 				<div class="weather"></div>
 				<div class="date"></div>
 			</div>
 			<div class="weather-box">
-				<p class="cityName"></p>
 				<div class="average-temp"></div>
 				<div class="weather"></div>
 				<div class="date"></div>
 			</div>
 			<div class="weather-box">
-				<p class="cityName"></p>
 				<div class="average-temp"></div>
 				<div class="weather"></div>
 				<div class="date"></div>
